1.3.4 - TBD
    * Added new tab in the Render Controls dialog for water related settings
    * Added slider for water visibility
    * Added slider for water opacity
    * Removed the "clear water" option (which is made obsolete by water
      visibility slider)
    * Added custom water color setting
    * All water settings can now be stored as custom defaults
    * Removed the visible sea border in water world rendering mode
    * Lily pads now cast shadows
    * Display a warning when a scene from a newer version of Chunky is loaded
    * Saving a scene with a different name no longer hides the old scene by
      renaming the old scene description file with the .backup suffix
    * Added scrollbar to Render Controls dialog for small screens (only visible
      when the whole window does not fit on screen)

1.3.3 - 2014-12-21
    * Fixed rendering of the 1.8 door blocks using Birch, Spruce, Jungle,
      Dark Oak, and Acacia wood.
    * Set unknown blocks back to being invisible (instead of question marks).
    * Fixed error causing the Benchmark tool to fail horribly.

1.3.2 - 2014-12-13
    * Added option to the sky tab for rendering the sky transparent.
    * Minor improvements to Launcher command-line interface.
    * Fixed rendering of the 1.8 fence blocks using Birch, Spruce, Jungle,
      Dark Oak, and Acacia wood
    * Octree and grass/foliage textures are not saved to disk again if they
      were not changed since the last time they were saved
    * Added Stereographic projection mode
    * The launcher now remembers Java options changed in the launch settings
    * More descriptive error message when failing to open a texture pack

1.3.1 - 2014-09-01
    * Fixed bug in the .hdr texture loader that crashed all render threads

1.3 - 2014-08-31
    * Attempted to make PNG writing more efficient by splitting PNGs into
      1 MiB chunks.
    * Removed the "render lock/auto lock" features. These are replaced